# Game-Boy-Emulator

./: .gitignore  CMakeLists.txt  a.out  boot.c  build.sh  cartridge.h  cpu.h  cpu.h.gch  main.c  makefile
Test/: test_framework.h  test_runner.c
include/: audio.h  cartridge.h  controls.h  cpu.h  display.h  emulator.h
src/: audio.c  boot.c  cartridge.c  controls.c  cpu.c  display.c  emulator.c  main.c
